fix: style scrollbar

--- a/src/contentscript/overlay/root/pages/Notifications/Notifications.module.scss
+++ b/src/contentscript/overlay/root/pages/Notifications/Notifications.module.scss
@@ -56,7 +56,7 @@
   overflow-y: scroll;
   direction: rtl;
   &::-webkit-scrollbar {
-    width: 6px;
+    width: 4px;
     cursor: pointer;
   }
   &::-webkit-scrollbar-track {
